support for roles in addition to already implemented authorities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.username=root
 spring.datasource.password=CcmN*`6@3T9H%P#yg^V<7v
 
 custom.authorities={'manage-users','manage-projects'}
+custom.roles={'ADMIN','MANAGER', 'USER'}
+# 1: authorities, 2: roles
+custom.authType=1
+
+
 # first in the list is the default encoder
 custom.password.encoders={'scrypt', 'bcrypt', 'argon2', 'pbkdf2'}
 # encoder for hashes without {id}
