--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ custom.password.idless.encoder="scrypt"
 #spring.sql.init.mode=always
 #spring.jpa.generate-ddl=true
 
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
