recaptcha secret as value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ custom.password.idless.encoder="scrypt"
 
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+
+custom.recaptcha.secret="6LcyyEMpAAAAANm0qZB6kzDQRT5Li4FSGCTe8ESf"
