upgrade to boot 3.5 and cloud 2025.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ custom.password.encoders={'scrypt', 'bcrypt', 'argon2', 'pbkdf2'}
 custom.password.idless.encoder="scrypt"
 
 #to use the first time
-#spring.sql.init.mode=always
-#spring.jpa.generate-ddl=true
+spring.sql.init.mode=always
+spring.jpa.generate-ddl=true
 
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
